--- a/03-projeto-calculadora/index.html
+++ b/03-projeto-calculadora/index.html
@@ -9,11 +9,46 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Calculadora</title>
+
   </head>
 
   <body>
+    <h1>Calculadora JS Orientada a Objetos</h1>
+    <div id="calculator">
+      <div id="screen-container">
+        <div id="upper-number">0</div>
+        <div id="result-number">0</div>
+      </div>
 
-
+      <div id="buttons-container">
+        <div class="btn-container">
+          <button class="btn" id="ac-btn">AC</button>
+          <button class="btn" id="division-btn">/</button>
+        </div>
+        <div class="btn-container">
+          <button class="btn">7</button>
+          <button class="btn">8</button>
+          <button class="btn">9</button>
+          <button class="btn" id="multiplication-btn">x</button>
+        </div>
+        <div class="btn-container">
+          <button class="btn">4</button>
+          <button class="btn">5</button>
+          <button class="btn">6</button>
+          <button class="btn" id="minus-btn">-</button>
+        </div>
+        <div class="btn-container">
+          <button class="btn">1</button>
+          <button class="btn">2</button>
+          <button class="btn">3</button>
+          <button class="btn" id="plus-btn">+</button>
+        </div>
+        <div class="btn-container">
+          <button class="btn" id="zero-btn">0</button>
+          <button class="btn" id="equals-btn">=</button>
+        </div>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
