finalizado css calculadora

--- a/03-projeto-calculadora/index.html
+++ b/03-projeto-calculadora/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="css/style.css">
     <title>Calculadora</title>
 
@@ -16,36 +16,40 @@
     <h1>Calculadora JS Orientada a Objetos</h1>
     <div id="calculator">
       <div id="screen-container">
-        <div id="upper-number">0</div>
+        <div id="upper-number">999999999999999999999</div>
         <div id="result-number">0</div>
       </div>
 
       <div id="buttons-container">
         <div class="btn-container">
-          <button class="btn" id="ac-btn">AC</button>
-          <button class="btn" id="division-btn">/</button>
+          <div class="btn" id="ac-btn">AC</div>
+          <div class="btn" id="division-btn">/</div>
         </div>
+
         <div class="btn-container">
-          <button class="btn">7</button>
-          <button class="btn">8</button>
-          <button class="btn">9</button>
-          <button class="btn" id="multiplication-btn">x</button>
+          <div class="btn">7</div>
+          <div class="btn">8</div>
+          <div class="btn">9</div>
+          <div class="btn" id="multiplication-btn">x</div>
         </div>
+
         <div class="btn-container">
-          <button class="btn">4</button>
-          <button class="btn">5</button>
-          <button class="btn">6</button>
-          <button class="btn" id="minus-btn">-</button>
+          <div class="btn">4</div>
+          <div class="btn">5</div>
+          <div class="btn">6</div>
+          <div class="btn" id="minus-btn">-</div>
         </div>
+
         <div class="btn-container">
-          <button class="btn">1</button>
-          <button class="btn">2</button>
-          <button class="btn">3</button>
-          <button class="btn" id="plus-btn">+</button>
+          <div class="btn">1</div>
+          <div class="btn">2</div>
+          <div class="btn">3</div>
+          <div class="btn" id="plus-btn">+</div>
         </div>
+
         <div class="btn-container">
-          <button class="btn" id="zero-btn">0</button>
-          <button class="btn" id="equals-btn">=</button>
+          <div class="btn" id="zero-btn">0</div>
+          <div class="btn" id="equals-btn">=</div>
         </div>
       </div>
     </div>
