--- a/03-projeto-calculadora/index.html
+++ b/03-projeto-calculadora/index.html
@@ -16,7 +16,7 @@
     <h1>Calculadora JS Orientada a Objetos</h1>
     <div id="calculator">
       <div id="screen-container">
-        <div id="upper-number">999999999999999999999</div>
+        <div id="upper-number"></div>
         <div id="result-number">0</div>
       </div>
 
