--- a/07-projeto-to-do-list/index.html
+++ b/07-projeto-to-do-list/index.html
@@ -12,11 +12,27 @@
   </head>
 
   <body>
-    <h1>To Do List - Orientado a Objeto</h1>
-
-    <div class="container">
-      <button class="btn btn-danger">Click</button>
+    <div id="main-container">
+      <div id="add-container">
+        <h2>Adicione suas tarefas:</h2>
+        <form action="">
+          <input type="text" name="task" placeholder="Digite uma tarefa">
+          <button type="submit" id="add"> <i class="bi bi-plus-lg"></i></button>
+        </form>
+      </div>
+      <div id="tasks-container">
+        <h2>Veja suas tarefas:</h2>
+        <!-- Template -->
+        <div class="task hidden">
+          <i class="bi bi-check-lg"></i>
+          <span class="task-title">Título da tarefa</span>
+          <i class="bi bi-trash-fill"></i>
+        </div>
+        <!-- Fim Template -->
+        <p id="empty-tasks">Não existem tarefas cadastradas</p>
+      </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"></script>
