--- a/07-projeto-to-do-list/index.html
+++ b/07-projeto-to-do-list/index.html
@@ -5,33 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do App - OOP</title>
+    <title>To do List - OOP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    <div id="main-container">
-      <div id="add-container">
-        <h2>Adicione suas tarefas:</h2>
-        <form action="">
-          <input type="text" name="task" placeholder="Digite uma tarefa">
-          <button type="submit" id="add"> <i class="bi bi-plus-lg"></i></button>
-        </form>
-      </div>
-      <div id="tasks-container">
-        <h2>Veja suas tarefas:</h2>
-        <!-- Template -->
-        <div class="task hidden">
-          <i class="bi bi-check-lg"></i>
-          <span class="task-title">Título da tarefa</span>
-          <i class="bi bi-trash-fill"></i>
-        </div>
-        <!-- Fim Template -->
-        <p id="empty-tasks">Não existem tarefas cadastradas</p>
-      </div>
-    </div>
+    <main id="main-container">
+        <section id="add-container">
+            <h2>Adicione suas tarefas:</h2>
+            <form action="">
+                <input type="text" name="task" id="task" placeholder="O que você tem para fazer?">
+                <button type="submit" id="add"><i class="bi bi-plus-circle"></i></i></button>
+            </form>
+        </section>
+        <section id="tasks-container">
+            <h2>Veja suas tarefas:</h2>
+            <!-- Tamplate -->
+
+            <!-- Fim Tamplate -->
+            <p id="empty-tasks">Não há tarefas cadastradas.</p>
+        </section>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
